--- a/assets/css/sections/gallery.scss
+++ b/assets/css/sections/gallery.scss
@@ -1,6 +1,5 @@
 .gallery{
   width: 90%;
-  height: 80vh;
   margin: 3em auto;
 
   h2{
